# Wisdom

./: .gitignore  .pre-commit-config.yaml  AGENT_PROMPT.md  BRA_KOMMANDON.md  CHANGELOG.md  Comming_tasks.md  Makefile  README.md  Random_Error.md  Summary 2025-09-30.md  Wisdom_db_snapshot_2025-09-28_212728.md  checklist_supabase.md  codex_manual_updates.md  codex_task2025-09-29.md  codex_tasks.md  codex_tasks_old.md  elements.md  flutter_dart_error.md  github_app_clone.py  init_projectapp.sql  new _functions.md  pubspec.yaml  pytestest_error.md  settingup_android_logg.md  summary2025--09-23.md  summary2025-09-25  supabase_summary_2025-10-01.md  tasks.md  tasks2025-09-25.md  tasks2025-10-01.md  uifix.md  wisdom_forbattringsplan.md  workflow2025-09-25
backend/: README.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  permissions.py  schemas.py
backend/app/repositories/: __init__.py  auth.py  orders.py  payments.py  profiles.py  services.py
backend/app/routes/: admin.py  api_auth.py  api_feed.py  api_orders.py  api_payments.py  api_profiles.py  api_services.py  api_sfu.py  auth.py  community.py  courses.py  landing.py  payments.py  profiles.py  studio.py
backend/migrations/sql/: 001_app_schema.sql  002_seed_dev.sql  003_teacher_approvals_patch.sql  004_course_quiz_patch.sql  005_quiz_questions_patch.sql  006_quiz_questions_nullable.sql  007_app_config.sql  008_posts_patch.sql  (+7 more)
backend/tests/: conftest.py  test_admin_permissions.py  test_api_smoke.py  test_community_flows.py  test_courses_public.py  test_courses_studio.py
(+318 files in other folders)
